plugins {
    id 'java'
    id "io.freefair.lombok" version "6.5.1"
    id "me.champeau.gradle.jmh" version "0.5.3"
}

group 'com.github.zakgof'
version '0.0.1-SNAPSHOT'

java {
    targetCompatibility = JavaVersion.VERSION_18
    sourceCompatibility = JavaVersion.VERSION_18
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.3'
    implementation 'org.objenesis:objenesis:3.3'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
    testImplementation 'org.slf4j:slf4j-simple:2.0.3'

    testImplementation 'com.esotericsoftware:kryo:5.3.0'

    jmh 'org.openjdk.jmh:jmh-core:1.35'
    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.35'

}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}